--- a/src/main/resources/templates/common/header_cx.html
+++ b/src/main/resources/templates/common/header_cx.html
@@ -17,7 +17,7 @@
 				<!--top-header开始-->
 				<div id="top-header" class="top-head cl">
 					<div class="width-wrap">
-						<a href="#">
+						<a th:href="@{/index}">
 							<h1 class="logo">海马</h1>
 						</a>
 						<ul class="cl">
