--- a/src/main/resources/templates/member/register.html
+++ b/src/main/resources/templates/member/register.html
@@ -58,7 +58,7 @@
 					<em class=" font-pro sz18">400-100-8899（08:00-20:00）</em>
 				</p>
 				<h2 class="logo left-wrap ml5">
-					<a th:href="@{/index.html}">
+					<a th:href="@{/index}">
 						<img th:src="@{/img/logo.png}" width="35%" height="25%" alt="海马">
 					</a>
 				</h2>
