--- a/src/main/resources/templates/usermanagement/account.html
+++ b/src/main/resources/templates/usermanagement/account.html
@@ -41,7 +41,7 @@
 					</div>
 					<!--左侧导航结束-->
 					<!--右侧内容开始-->
-					<div class="right-wrap" id="right-content">
+					<div class="right-wrap" id="right-content1">
                 	<div class="cl">
                     <!--中间投资信息开始-->
                     <div id="middle" class="asset mr">
