--- a/src/main/resources/templates/administrator/procurement.html
+++ b/src/main/resources/templates/administrator/procurement.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>海马采购发布管理 - 海马官网</title>
-		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+		<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
 		<link rel="stylesheet" th:href="@{/css/commonn.css}" />
 		<link rel="stylesheet" th:href="@{/css/base.css}" />
 		<link rel="stylesheet" th:href="@{/css/pop.css}" />
